--- a/images/style.css
+++ b/images/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Overpass", sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
 :root {
@@ -18,26 +19,41 @@
 body {
     background-color: var(--very-dark-blue);
     height: 100svh;
+
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .card {
    background: var(--black-gradient);
    max-width: 412px;
    padding: 32px;
    border-radius: 30px;
 }
+
+.estrla {
+   background-color: var(--dark-blue);
+   width: 48px;
+   height: 48px;
+
+   display: flex;
+   justify-content: center;
+   align-items: center;
+
+   border-radius: 50%;
+
+   margin-bottom: 30px;
+}
+
 .card h1 {
     color: var(--white);
-}
+    font-size: 28px;
+    margin-bottom: 15px;
+    }
 
 .card p {
     color: var(--light-grey);
-}
-
-.estrla {
-    background-color: var(--dark-blue);
-    width: 48px;
-    height: 48px;
+    font-size: 15px;
+    line-height: 24px;
 }
